fix gutter spacing, add animation

--- a/styles/colors.less
+++ b/styles/colors.less
@@ -6,7 +6,7 @@
 @blue-gray: #404f62;
 @gray: #373b41;
 @dark-gray: #282a2e;
-@very-dark-gray: #212121;
+@very-dark-gray: #20222c;
 @black: #000;
 
 @cyan: #00bfff;
@@ -66,7 +66,7 @@
 @cursor-width: 2px;
 @selected: rgba(255, 255, 255, 0.15); // selected background color
 @selected-border: rgba(85,181,219,0.9);
-@selected-line: rgba(255, 255, 255, 0.08);
+@selected-line: rgba(255, 255, 255, 0.03);
 
 // HTML
 @tag: @cyan;
