--- a/styles/editor.less
+++ b/styles/editor.less
@@ -12,6 +12,7 @@ atom-text-editor, // <- remove when Shadow DOM can't be disabled
 
   .line.cursor-line {
     background-color: @syntax-cursor-line;
+    transition: all 0.2s;
   }
 
   .invisible {
@@ -47,11 +48,15 @@ atom-text-editor, // <- remove when Shadow DOM can't be disabled
 
     .line-number {
       color: @syntax-gutter-text-color;
+      padding-left: 10px;
+      border-left: 2px solid transparent;
       -webkit-font-smoothing: antialiased;
 
       &.cursor-line {
         color: @syntax-gutter-text-color-selected;
         background-color: @syntax-gutter-background-color-selected;
+        border-left: 2px solid @blue;
+        transition: all 0.2s;
       }
 
       .icon-right {
